--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>ghostmouse-java</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <scm>
+        <developerConnection>scm:git:https://github.com/hoyipsing/ghostmouse-java.git</developerConnection>
+    </scm>
+
     <build>
         <plugins>
             <plugin>
@@ -22,6 +26,10 @@
                         </manifest>
                     </archive>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.1</version>
             </plugin>
         </plugins>
     </build>
