--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
     <groupId>ghostmouse-java</groupId>
     <artifactId>ghostmouse-java</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <scm>
         <developerConnection>scm:git:https://github.com/hoyipsing/ghostmouse-java.git</developerConnection>
-      <tag>ghostmouse-java-1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <build>
